# image-processing

./: .gitattributes  .gitignore  Makefile  README.md  params.yaml  pyproject.toml  requirements.txt
data/: angiography1.tif  angiography2.tif  blurry_moon.tif  box.npz  chessboard.avi  dinov2_vits14_pretrain.pth  noised_box.npz  traffic.avi  tribuna.npz  uncalib_chessboard.avi
data/cherubino/: intrinsic_points2D.npz
homeworks/: homework_00.py  homework_01.ipynb  homework_02.ipynb  homework_03.ipynb  homework_04.ipynb  task_05.ipynb  task_07.ipynb  task_08.ipynb
lectures/: lecture_01.tex  lecture_02.tex  lecture_03.tex  lecture_04.tex  lecture_05.tex  lecture_06.ipynb  lecture_06.tex  lecture_07.tex  lecture_08.tex  lecture_09.tex  lecture_10.tex
lectures/latex/: about.tex  lecture_01.tex  lecture_02.tex  lecture_03.tex  lecture_04.tex  lecture_05.tex  lecture_06.tex  lecture_07.tex  lecture_08.tex  lecture_09.tex  lecture_10.tex
notebooks/: camera_calibration.py  chessboard_pnp.py  distortion_correction.py  notebook_01.ipynb  notebook_02.ipynb  notebook_03.ipynb  notebook_04.ipynb  notebook_05.ipynb  notebook_06.ipynb  notebook_07.ipynb  notebook_08.ipynb  notebook_09.ipynb  notebook_10.ipynb
tasks/: task_01.ipynb  task_02.ipynb  task_03.ipynb  task_04.ipynb  task_05.ipynb  task_07.ipynb  task_08.ipynb  task_09.ipynb  task_10.ipynb
tutorial_notebooks/tutorial_07/: camera_model.ipynb
