[project]
name = "image-processing"
version = "0.0.1"
description = "Image Processing Course"
readme = "README.md"

[tool.ruff]
target-version = "py310"
line-length = 80
indent-width = 4    
output-format = "full"
show-fixes = true
exclude = [
  "lectures"
]

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E402"]
preview = true
explicit-preview-rules = true
